--- a/packages/konux-app/src/index.scss
+++ b/packages/konux-app/src/index.scss
@@ -7,9 +7,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #343d47;
-  width: 100%;
-  height: 100%;
   position: absolute;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .kn-root{
